# desktop

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  REUSE.toml  deny.toml
.cargo/: config.toml
docs/investigations/: sp9-contact-data-sanitization-audit.md
scripts/: setup-e2e.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/locales/: de.json  en.json  es.json  fr.json
src-tauri/src/: error.rs  lib.rs  main.rs  relay.rs  state.rs  test_server.rs  tray.rs
src-tauri/src/commands/: actions.rs  aha.rs  auth.rs  backup.rs  card.rs  contacts.rs  content.rs  decoy.rs  delivery.rs  devices.rs  duress.rs  emergency.rs  exchange.rs  gdpr.rs  help.rs  i18n.rs  identity.rs  labels.rs  mod.rs  recovery.rs  sync.rs  theme.rs  tor.rs  validation.rs  visibility.rs  workflow.rs
src-tauri/tests/: contract_core_api_tests.rs
ui/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
ui/e2e/fixtures/: tauri-mock.ts  test-helpers.ts
ui/e2e/tests/: accessibility.spec.ts  app.spec.ts  devices.spec.ts  groups.spec.ts  help.spec.ts  recovery.spec.ts  visual.spec.ts
ui/playwright-report/: index.html  results.json  results.xml
ui/src/: App.tsx  main.tsx
ui/src/components/: QRCanvas.tsx  ValidationBadge.tsx
ui/src/components/core-ui/: CardPreviewPanel.tsx  ComponentRenderer.tsx  FieldListPanel.tsx  InfoPanelDisplay.tsx  ScreenRenderer.tsx  TextDisplay.tsx  TextInputField.tsx  ToggleListPanel.tsx  index.ts
ui/src/components/core-ui/__tests__/: CardPreviewPanel.test.tsx  ComponentRenderer.test.tsx  FieldListPanel.test.tsx  InfoPanelDisplay.test.tsx  ScreenRenderer.test.tsx  TextDisplay.test.tsx  TextInputField.test.tsx  ToggleListPanel.test.tsx  contract.test.ts
ui/src/pages/: ContactDuplicates.tsx  ContactMerge.tsx  ContactSettings.tsx  Contacts.tsx  Delivery.tsx  Devices.tsx  DuressSettings.tsx  EmergencyWipe.tsx  Exchange.tsx  Help.tsx  Home.tsx  Lock.tsx  Recovery.tsx  Settings.tsx  Setup.tsx  SupportUs.tsx
ui/src/pages/onboarding/: AddFieldsStep.tsx  BackupPromptStep.tsx  CreateIdentityStep.tsx  OnboardingWizard.tsx  PreviewCardStep.tsx  ReadyStep.tsx  SecurityStep.tsx  WelcomeStep.tsx  index.ts
ui/src/pages/settings/: index.ts  types.ts
ui/src/services/: ahaService.ts  helpService.ts  i18nService.ts  themeService.ts  validationService.ts
ui/src/styles/: app.css  core-ui.css  onboarding.css
ui/src/types/: core-ui.ts
ui/src/utils/: focusTrap.ts
ui/test-results/: .last-run.json
ui/test-results/tests-accessibility-Access-3b65f-no-critical-a11y-violations-chromium/: video-1.webm  video.webm
