# SPDX-FileCopyrightText: 2026 Mattia Egloff <mattia.egloff@pm.me>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vauchi-desktop"
version = "0.1.0"
edition = "2021"
description = "Desktop app for Vauchi - privacy-focused contact card exchange"
license = "GPL-3.0-or-later"

[lib]
name = "vauchi_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core library - use git dependency for CI, patched to local path via .cargo/config.toml
vauchi-core = { git = "https://gitlab.com/vauchi/core.git", branch = "feature/uniffi-localized-help", features = ["content-updates"] }

# Tauri framework
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# QR code generation
qrcode = "0.14"

# Base64 encoding for backups
base64 = "0.22"

# Platform directories
dirs = "5"

# Hex encoding for public keys
hex = "0.4"

# URL validation
url = "2"

# WebSocket for relay sync
tungstenite = { version = "0.24", features = ["native-tls"] }
native-tls = "0.2"

[features]
default = ["custom-protocol", "secure-storage"]
custom-protocol = ["tauri/custom-protocol"]
secure-storage = ["vauchi-core/secure-storage"]

[dev-dependencies]
tempfile = "3"
